tic-tac-toe complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body onload="init()">
     <h1>Tic Tac Toe</h1>
 
+    <div id="currentPlayerDisplay">
+      Aktueller Spieler: <span id="currentPlayer"></span>
+    </div>
+
     <div id="content"></div>
 
     <div class="center mt-32">
